--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Rukavishnikov Mikhail</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal">Developed by Mikhail Rukavishnikov</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="#"></a>
-            <a class="p-2 text-dark" href="#">Информация</a>
-            <a class="p-2 text-dark" href="#">Контакты</a>
+            <a class="p-2 text-dark" href="/info">Информация</a>
+            <a class="p-2 text-dark" href="/contacts">Контакты</a>
         </nav>
-        <a class="btn btn-outline-primary" href="#">Войти</a>
+        <a class="btn btn-outline-primary" href="/admin">Войти</a>
     </div>
     <div class="container mt-5">
         <div class="row">
             <div class="col-5 offset-1">
-                <h1>Погода в вашем городе</h1>
+                <h1>Узнайте погоду</h1>
                 <form action="" method="POST">
                     {% csrf_token %}
                     <label for="city">Ваш город</label>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="col-5 offset-1">
-                <h1>Информация</h1>
+                <h1>Прямо сейчас</h1>
 
                 {% for info in all_info %}
                 <div class="alert alert-info">
@@ -38,9 +38,10 @@
                         <div class="col-9">
                             <b>Город:</b> {{ info.city }}<br>
                             <b>Температура:</b> {{ info.temp }}<sup>0</sup>
+                            <!--a class="mt-2 btn btn-outline-danger" type="submit" href="#">Удалить</a>-->
                         </div>
                         <div class="col-2 offset-1">
-                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" alt="Фото погоды" class="img-thumbnail">
+                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" style="position:absolute;left:-60px;right:100px" width=60 height=60 alt="Фото погоды">
                         </div>
                     </div>
                 </div>
@@ -48,5 +49,8 @@
             </div>
         </div>
     </div>
+    <div class="container" align="center">
+        <hr>
+        &copy; All rights reserved 2020
 </body>
 </html>
