--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -48,9 +48,14 @@
                     </div>
                     <button class="mt-1 btn btn-info" type="button" data-toggle="collapse" data-target="#{{ info }}"
                                                 aria-expanded="false" aria-controls="{{ info }}">Подробнее</button>
-                        <div class="collapse" id="{{ info }}">
+                        <div class="mt-2 collapse" id="{{ info }}">
                             <b>Небо:</b> {{ info.desc }}<br>
-                            <b>Ощущается как:</b> {{ info.feel }}<sup>o</sup>
+                            <b>Ощущается как:</b> {{ info.feel }}<sup>o</sup><br>
+                            <b>Влажность:</b> {{ info.humid }}</b>%</b><br>
+                            <b>Скорость ветра:</b> {{ info.wind }}</b> м/с</b><br>
+                            <b>Облачность:</b> {{ info.clouds }}<b></b>%</b><br>
+                            <b>Рассвет:</b> {{ info.sunrise }} МСК<br>
+                            <b>Закат:</b> {{ info.sunset }} МСК <br>
                         </div>       
                 </div>
                 {% endfor %}
